# django-assign

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
bitcoin_api/: apps.py  models.py  paginations.py  serializers.py  urls.py  views.py
carefi_assign/: asgi.py  settings.py  urls.py  wsgi.py
