[tool.poetry]
name = "assign"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
django = "^4.1.3"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
